--- a/WebWallBoard.csproj
+++ b/WebWallBoard.csproj
@@ -51,6 +51,37 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="404.html" />
+    <Content Include="apple-touch-icon-114x114-precomposed.png" />
+    <Content Include="apple-touch-icon-57x57-precomposed.png" />
+    <Content Include="apple-touch-icon-72x72-precomposed.png" />
+    <Content Include="apple-touch-icon-precomposed.png" />
+    <Content Include="apple-touch-icon.png" />
+    <Content Include="build\build.xml" />
+    <Content Include="build\tools\ant-contrib-1.0b3.jar" />
+    <Content Include="build\tools\htmlcompressor-0.9.9.jar" />
+    <Content Include="build\tools\jpegtran.exe" />
+    <Content Include="build\tools\optipng-0.6.4-exe\LICENSE.txt" />
+    <Content Include="build\tools\optipng-0.6.4-exe\optipng.exe" />
+    <Content Include="build\tools\yuicompressor-2.4.2.jar" />
+    <Content Include="crossdomain.xml" />
+    <Content Include="css\handheld.css" />
+    <Content Include="css\style.css" />
+    <Content Include="css\wallboard.css" />
+    <Content Include="favicon.ico" />
+    <Content Include="humans.txt" />
+    <Content Include="img\.gitignore" />
+    <Content Include="img\wood.jpg" />
+    <Content Include="index.html" />
+    <Content Include="js\libs\dd_belatedpng.js" />
+    <Content Include="js\libs\jquery-1.5.1.js" />
+    <Content Include="js\libs\jquery-1.5.1.min.js" />
+    <Content Include="js\libs\modernizr-1.7.min.js" />
+    <Content Include="js\mylibs\.gitignore" />
+    <Content Include="js\plugins.js" />
+    <Content Include="js\script.js" />
+    <Content Include="js\wallboard.js" />
+    <Content Include="robots.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -61,6 +92,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="build\config\default.properties" />
+    <None Include="build\config\project.properties" />
+    <None Include="build\createproject.sh" />
+    <None Include="build\runbuildscript.bat" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
