--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,6 @@
   <repository path="..\WebWallBoard.Domain.Tests\packages.config" />
   <repository path="..\WebWallBoard.Web.Tests\packages.config" />
   <repository path="..\WallBoard.Web\packages.config" />
+  <repository path="..\WallBoard.Data\packages.config" />
+  <repository path="..\WallBoard.Domain\packages.config" />
 </repositories>
